##########################
# Setup.py Configuration #
##########################
[metadata]
name = back_end
version = 0.0.1-dev
description = deduplication domain module
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com//cs6620-fall21-intelligent-assignment-of-data-to-dedup-nodes
download_url = https://github.com//cs6620-fall21-intelligent-assignment-of-data-to-dedup-nodes/releases
project_urls =
    Bug Tracker = https://github.com//cs6620-fall21-intelligent-assignment-of-data-to-dedup-nodes/issues
    Source Code = https://github.com//cs6620-fall21-intelligent-assignment-of-data-to-dedup-nodes

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    # TODO add your own free-text keywords

[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # TODO your requirements go here
    grpcio
    protobuf
    grpcio-tools
    python-rocksdb @ git+https://git@github.com/twmht/python-rocksdb@pybind11#egg=python-rocksdb
    ;https://github.com/twmht/python-rocksdb/issues/51#issuecomment-791188674


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage

[options.entry_points]
console_scripts =
    back_end = back_end.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = back_end
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/back_end
    .tox/*/lib/python*/site-packages/back_end

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
